[package]
name = "open-sass"
version = "0.1.0"
authors = ["mahmoud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router", "html"] }

# Debug
dioxus-logger = "0.5.1"
gloo = "0.11.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
