[package]
name = "open-sass"
version = "0.1.0"
authors = ["mahmoud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router", "html"] }

# Debug
dioxus-logger = "0.5.1"
gloo = "0.11.0"
tokio = { version = "1.41.0", optional = true }
mongodb = { version = "3.1.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
futures-util = { version = "0.3.31", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
anyhow = "1.0.92"
time = "0.3.36"
regex = "1.11.1"

[features]
default = []
server = ["dioxus/axum", "tokio", "mongodb", "dotenv", "futures-util", "jsonwebtoken", "argon2", "uuid", "rand", "axum-extra", "rand_core"]
web = ["dioxus/web"]
axum-extra = ["dep:axum-extra"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
