[package]
name = "open-sass"
version = "0.1.0"
authors = ["mahmoud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.6.3", features = ["fullstack", "router", "html"] }
gloo = { version = "0.11.0", features = ["storage"] }
tokio = { version = "1.45.0", features = ["full"], optional = true }
mongodb = { version = "3.1.0", optional = true }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.38", features = ["serde"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
futures-util = { version = "0.3.31" }
jsonwebtoken = { version = "9.3.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
uuid = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }
axum-extra = { version = "0.9.4", features = ["cookie"], optional = true }
rand_core = { version = "0.6.4", features = ["std"], optional = true }
anyhow = "1.0.92"
time = "0.3.36"
regex = "1.11.1"
tower-http = { version = "0.6.2", features = ["cors"], optional = true }
axum = { version = "0.7.7", optional = true }
use-mdbook = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen" }
dioxus-logger = "0.6.2"

[features]
default = []
server = ["dioxus/server", "tokio", "mongodb", "jsonwebtoken", "argon2", "uuid", "rand", "axum-extra", "rand_core", "axum", "tower-http"]
web = ["dioxus/web"]

[build-dependencies]
mdbook-gen = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen", features = ["manganis"]}
mdbook-shared = { git = "https://github.com/dioxuslabs/include_mdbook", branch = "jk/build-gen" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
